--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pa-shop</title>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./trangchu/main/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -24,10 +24,10 @@
           </div>
           <div class="container__header-slide">
             <a class="slide-list tc" href="./index.html">Trang Chủ</a>
-            <a class="slide-list" href="../lienhe/lienhe.html">Liên hệ</a>
-            <a class="slide-list" href="../thongtin/thongtin.html">Thông tin</a>
+            <a class="slide-list" href="/trangchu/lienhe/lienhe.html">Liên hệ</a>
+            <a class="slide-list" href="/trangchu/thongtin/thongtin.html">Thông tin</a>
             <div class="warapper-list-product">
-              <a class="slide-list slide-list-sp" href="../sanpham/sanpham.html">Sản phẩm</a>
+              <a class="slide-list slide-list-sp" href="/trangchu/sanpham/sanpham.html">Sản phẩm</a>
               <ul class="list-sp">
                 <span class="carret"></span>
                 <li class="item-sp">Iphone 99%</li>
@@ -36,14 +36,14 @@
                 <li class="item-sp">Watch thông minh hãng apple like new!</li>
               </ul>
             </div>
-            <a class="slide-list" href="../tailieu/tailieu.html">Tài liệu</a>
+            <a class="slide-list" href="/trangchu/tailieu/tailieu.html">Tài liệu</a>
           </div>
           <div class="container__header-user">
             <div class="search">
               <input class="inp-search" type="text" name="" id="" />
               <img
                 class="icon-search"
-                src="../icon.svg/icon-search.svg"
+                src="/trangchu/icon.svg/icon-search.svg"
                 alt=""
               />
               <ul class="list-search">
@@ -54,12 +54,12 @@
               </ul>
             </div>
             <div class="user-list">
-              <div class="wrapper-tym"><img class="user-list-item" src="../icon.svg/tym.svg" alt="" /></div>
-              <div class="wrapper-buy"><img class="user-list-item" src="../icon.svg/buy.svg" alt="" /></div>
+              <div class="wrapper-tym"><img class="user-list-item" src="/trangchu/icon.svg/tym.svg" alt="" /></div>
+              <div class="wrapper-buy"><img class="user-list-item" src="/trangchu/icon.svg/buy.svg" alt="" /></div>
               <div class="wrapper-user">
-                <div class="user-login"><img class="user-list-item login" src="../icon.svg/user.svg" alt="" /></div>
+                <div class="user-login"><img class="user-list-item login" src="/trangchu/icon.svg/user.svg" alt="" /></div>
                  <div class="list-user">
-                    <li class="iteam-user"> <a href="../login/login.html">đăng nhập</a></li>
+                    <li class="iteam-user"> <a href="/trangchu/login/login.html">đăng nhập</a></li>
                     
                  </div>
               </div>
@@ -79,7 +79,7 @@
               ><p class="span-nav">Tay cầm</p></a
             >
           </div>
-          <img class="banner" src="../img/banner.png" alt="" />
+          <img class="banner" src="/trangchu/img/banner.png" alt="" />
         </div>
         <div class="nav-sales">
           <div class="taitle">
@@ -110,7 +110,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -150,7 +150,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -192,7 +192,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="./icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -234,7 +234,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -284,37 +284,37 @@
           <div class="function">
             <div class="wrapper__function">
               <div class="container__function">
-                <img class="icon-function" src="../icon.svg/phone.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/phone.svg" alt="">
                 <p class="span-icon-function-phone">Điện Thoại</p>
               </div>
             </div>
             <div class="wrapper__function">
               <div class="container__function">
-                <img class="icon-function" src="../icon.svg/camera.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/camera.svg" alt="">
                 <p class="span-icon-function">Camera</p>
               </div>
             </div>
             <div class="wrapper__function">
               <div class="container__function">
-                <img class="icon-function" src="../icon.svg/computer.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/computer.svg" alt="">
                 <p class="span-icon-function">Máy Tính</p>
               </div>
             </div>
             <div class="wrapper__function">
               <div class="container__function">
-                <img class="icon-function" src="../icon.svg/play.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/play.svg" alt="">
                 <p class="span-icon-function">Tay Cầm</p>
               </div>
             </div>
             <div class="wrapper__function">
              <div class="container__function">
-                <img class="icon-function" src="../icon.svg/airpot.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/airpot.svg" alt="">
                 <p class="span-icon-function">Tai Nghe</p>
              </div>
             </div>
             <div class="wrapper__function">
               <div class="container__function">
-                <img class="icon-function" src="../icon.svg/watch.svg" alt="">
+                <img class="icon-function" src="/trangchu/icon.svg/watch.svg" alt="">
                 <p class="span-icon-function">Đồng Hồ Thông Minh</p>
               </div>
             </div>
@@ -342,7 +342,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -382,7 +382,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -424,7 +424,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -466,7 +466,7 @@
                       <div class="easys">
                         <img
                           class="icon-easys"
-                          src="../icon.svg/easys.svg"
+                          src="/trangchu/icon.svg/easys.svg"
                           alt=""
                         />
                       </div>
@@ -508,7 +508,7 @@
         <div class="nav"></div>
         <div class="nav"></div>
       </div>
-      <script src="./main.js"></script>
+      <script src="/trangchu/main/main.js"></script>
       <!-- ========================footer===================================== -->
       <footer class="footer"></footer>
     </div>
