--- a/trangchu/lienhe/lienhe.html
+++ b/trangchu/lienhe/lienhe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lien he</title>
     <link rel="stylesheet" href="./lienhe.css">
 </head>
 <body>
@@ -13,13 +13,13 @@
           <div class="container__header">
             <div class="container__header-logo">
               <span class="header-span">
-                <a class="item-header-strong" href="../main/index.html">Pa</a>
-                <a class="item-header" href="../main/index.html">-</a>
-                <a class="item-header" href="../main/index.html">s h o p</a>
+                <a class="item-header-strong" href="/index.html">Pa</a>
+                <a class="item-header" href="/index.html">-</a>
+                <a class="item-header" href="/index.html">s h o p</a>
               </span>
             </div>
             <div class="container__header-slide">
-              <a class="slide-list" href="../main/index.html">Trang Chủ</a>
+              <a class="slide-list" href="/index.html">Trang Chủ</a>
               <a class="slide-list lh" href="./lienhe.html">Liên hệ</a>
               <a class="slide-list" href="../thongtin/thongtin.html">Thông tin</a>
               <div class="warapper-list-product">
@@ -67,7 +67,7 @@
         <div class="main">
           <div class="wrapper_main-top">
             <img style="width: 16px;height: 16px;" src="../icon.svg/khoa.svg" alt="">
-            <a style="border-right: 1px solid#000;padding: 0 5px;color: #E11D71;font-size: 16px;" href="../main/index.html">Trang Chủ</a>
+            <a style="border-right: 1px solid#000;padding: 0 5px;color: #E11D71;font-size: 16px;" href="/index.html">Trang Chủ</a>
             <p style="margin-left: 5px; font-size: 16px;">Liên Hệ</p>
           </div>
           <div class="wrapper_main">
