--- a/trangchu/register/register.html
+++ b/trangchu/register/register.html
@@ -13,13 +13,13 @@
         <div class="container__header">
           <div class="container__header-logo">
             <span class="header-span">
-              <a class="item-header-strong" href="../main/index.html">Pa</a>
-              <a class="item-header" href="../main/index.html">-</a>
-              <a class="item-header" href="../main/index.html">s h o p</a>
+              <a class="item-header-strong" href="/index.html">Pa</a>
+              <a class="item-header" href="/index.html">-</a>
+              <a class="item-header" href="/index.html">s h o p</a>
             </span>
           </div>
           <div class="container__header-slide">
-            <a class="slide-list" href="..//main/index.html">Trang Chủ</a>
+            <a class="slide-list" href="/index.html">Trang Chủ</a>
             <a class="slide-list lh" href="../lienhe/lienhe.html">Liên hệ</a>
             <a class="slide-list" href="../thongtin/thongtin.html">Thông tin</a>
             <div class="warapper-list-product">
