--- a/trangchu/sanpham/sanpham.html
+++ b/trangchu/sanpham/sanpham.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SAN PHAM</title>
     <link rel="stylesheet" href="./sanpham.css">
     <link
       rel="stylesheet"
@@ -17,13 +17,13 @@
           <div class="container__header">
             <div class="container__header-logo">
               <span class="header-span">
-                <a class="item-header-strong" href="../main/index.html">Pa</a>
-                <a class="item-header" href="../main/index.html">-</a>
-                <a class="item-header" href="../main/index.html">s h o p</a>
+                <a class="item-header-strong" href="/index.html">Pa</a>
+                <a class="item-header" href="/index.html">-</a>
+                <a class="item-header" href="/index.html">s h o p</a>
               </span>
             </div>
             <div class="container__header-slide">
-              <a class="slide-list" href="../main/index.html">Trang Chủ</a>
+              <a class="slide-list" href="/index.html">Trang Chủ</a>
               <a class="slide-list" href="../lienhe/lienhe.html">Liên hệ</a>
               <a class="slide-list" href="../thongtin/thongtin.html">Thông tin</a>
               <div class="warapper-list-product">
@@ -72,7 +72,7 @@
           <div class="container__main">
               <div class="list">
                 <img style="width: 16px;height: 16px;" src="../icon.svg/khoa.svg" alt="">
-                <a style="margin: 0 10px;color: #E61D48;" href="../main/index.html">Trang Chủ</a>
+                <a style="margin: 0 10px;color: #E61D48;" href="/index.html">Trang Chủ</a>
                 <div class="border">|</div>
                 <p>Tất Cả Sản Phẩm</p>
               </div>
